# downgrade

./: Anchor.toml  package.json
programs/kycMerkleTree/: Cargo.toml
programs/kycMerkleTree/src/: lib.rs
programs/paid-ignition/: Cargo.toml
programs/paid-ignition/src/: constants.rs  lib.rs
programs/paid-ignition/src/instructions/: buy_in_early_pool.rs  buy_in_open_pool.rs  claim_offer.rs  create_pool.rs  fund_offer.rs  mod.rs  update_tge_date.rs  update_time.rs  user_withdraw_purchase.rs  withdraw_offer.rs
programs/paid-ignition/src/state/: buyer.rs  mod.rs  pool.rs
programs/paidStake/: Cargo.toml
programs/paidStake/src/: error.rs  lib.rs
programs/paidStake/src/instructions/: add_reward.rs  claim.rs  fund_reward.rs  init_pool.rs  init_reward.rs  mod.rs  stake.rs  withdraw.rs
programs/paidStake/src/states/: mod.rs  pool.rs  staker.rs
programs/paidnet/: Cargo.toml
programs/paidnet/src/: error.rs  lib.rs  pool_logic.rs
programs/paidnet/src/instructions/: buy_token_in_early_pool.rs  buy_token_in_open_pool.rs  create_pool.rs  fund_ido_token.rs  init_user.rs  mod.rs  unlock_ido.rs  update_tge_date.rs  update_time.rs  user_withdraw_purchase.rs  withdraw_ido_token.rs
programs/paidnet/src/state/: pool.rs  vesting.rs
tests/: kycMerkleTree.ts  paidStake.ts  paidStake.tss  paidnet.ts
